# mousiki

./: .gitignore  .gitmodules  AGENTS.md  BENCHMARK_COMPARE.md  CROSS_DECODE_NOTES.md  Cargo.toml  DEEP_PLC_WEIGHTS_PLAN.md  DRED_DISCUSSION.md  DRED_PORTING_GAPS.md  Dockerfile.opus-fuzz  FIXED_POINT_ALIGN_PLAN.md  FUZZING_PLAN.md  FUZZING_STATUS.md  HYBRID_DECODE_STEPS.md  HYBRID_FRAMING_PORTING_CHECKLIST.md  HYBRID_FRAMING_TODO.md  HYBRID_PORTING_STEPS.md  PORTING_STATUS.md  README.md  UNSAFE_AUDIT.md  outside1.opus
.github/workflows/: ci.yml
ctests/: CMakeLists.txt  README.md  analysis_compare.c  analysis_fft_stage_trace.c  analysis_fft_trace.c  bands_norm_test.c  celt_decoder_dataflow_test.c  celt_decoder_math_test.c  celt_decoder_noise_renorm_test.c  celt_decoder_plc_iir_test.c  celt_decoder_plc_test.c  celt_decoder_postfilter_test.c  celt_decoder_state_test.c  celt_fixed_encode_test.c  celt_synthesis_compare.c  codec_bench.c  comb_filter_test.c  compute_band_energies_test.c  fft_twiddles_48000_960.h  mathops_test.c  mdct_backward_compare.c  mdct_fixed.c  opus_celt_stubs.c  opus_packet_decode.c  opus_packet_encode.c  pitch_test.c  prefilter_test.c  quant_bands_test.c  run.sh  vq_test.c
docs/: CELT_FIXED_POINT_TESTING.md
examples/: decode.rs  decode_celt.rs  decode_celt_fixed.rs  libopusenc_example.rs  opus_packet_tool.rs  opusfile_example.rs  opusfile_seeking_example.rs  playback.rs  trivial_example.rs
examples/playback/: Cargo.toml
examples/playback/src/: main.rs
fuzz/: .gitignore  Cargo.toml
mousiki-deep-plc-weights/: Cargo.toml  build.rs
mousiki-dred-weights/: Cargo.toml  README.md  build.rs
mousiki-dred-weights/src/: lib.rs
mousiki-ogg/: Cargo.toml
mousiki-ogg/src/: crc.rs  lib.rs  pack.rs  packet.rs  page.rs  stream.rs  sync.rs
mousiki-ogg/src/c_style_api/: mod.rs
mousiki-ogg/tests/: c_style_api.rs  test_api.rs  upstream_vectors.rs
opus_c/: README.md
scripts/: bench_codec_compare.sh  gen_fft_bitrev_480.py  gen_fft_twiddles_48000_960.py  gen_fft_twiddles_48000_960_c.py  gen_mdct_twiddles_48000_960.py
src/: analysis.rs  bitdepth.rs  decoder.rs  dnn_utils.rs  dnn_weights.rs  dred.rs  dred_constants.rs  dred_encoder.rs  dred_rdovae_dec.rs  dred_rdovae_enc.rs  dred_stats_data.rs  extensions.rs  fargan.rs  lib.rs  lpcnet_enc.rs  mapping_matrix.rs  math.rs  mlp.rs  nnet.rs  oggreader.rs  opus.rs  opus_decoder.rs  opus_encoder.rs  opus_multistream.rs  packet.rs  pitchdnn.rs  plc_model.rs  projection.rs  range.rs  repacketizer.rs  test_trace.rs
src/celt/: PORTING_STATUS.md  arm_celt_map.rs  bands.rs  celt.rs  celt_decoder.rs  celt_encoder.rs  cwrs.rs  deep_plc.rs  entcode.rs  entdec.rs  entenc.rs  fft_bitrev_480.rs  fft_twiddles_fixed_48000_960.rs  fixed_arch.rs  fixed_ops.rs  kiss_fft.rs  kiss_fft_fixed.rs  laplace.rs  lpc.rs  math.rs  math_fixed.rs  mdct.rs  mdct_fixed.rs  mdct_twiddles_48000_960.rs  mini_kfft.rs  mod.rs  modes.rs  pitch.rs  quant_bands.rs  rate.rs  static_mode_48000_960.rs  types.rs  vq.rs  window_48000_960.rs  x86_celt_map.rs
src/libopusenc/: encoder.rs  error.rs  mod.rs  ogg_packer.rs  opus_header.rs  picture.rs  resample.rs
src/opusfile/: error.rs  head.rs  mod.rs  picture.rs  reader.rs  tags.rs  util.rs
src/silk/: PORTING_STATUS.md  a2nlsf.rs  ana_filt_bank_1.rs  apply_sine_window.rs  arm_silk_map.rs  autocorr.rs  biquad_alt.rs  burg_modified.rs  check_control_input.rs  cng.rs  code_signs.rs  codebook.rs  control_audio_bandwidth.rs  control_codec.rs  control_snr.rs  corr_matrix.rs  corr_matrix_flp.rs  debug.rs  dec_api.rs  decode_core.rs  decode_frame.rs  decode_indices.rs  decode_parameters.rs  decode_pitch.rs  decode_pulses.rs  decoder.rs  decoder_set_fs.rs  decoder_state.rs  enc_api.rs  encode_frame.rs  encode_frame_flp.rs  encode_indices.rs  encode_pulses.rs  energy_flp.rs  errors.rs  find_lpc.rs  find_lpc_flp.rs  find_pitch_lags.rs  find_pitch_lags_flp.rs  find_pred_coefs.rs  (+64 more)
src/silk/decoder/: nomarlize.rs
src/silk/encoder/: mod.rs  state.rs  state_flp.rs
tests/: extensions.rs  hybrid_decode.rs  hybrid_encode.rs  libopusenc_api.rs  libopusenc_callbacks.rs  libopusenc_encoder_extras.rs  libopusenc_integration_paths.rs  libopusenc_integration_resample.rs  libopusenc_ogg_packer.rs  libopusenc_opus_header.rs  libopusenc_picture.rs  libopusenc_pull.rs  libopusenc_resample.rs  lpc_inv_pred_gain.rs  opus_encode_regressions.rs  opus_encode_regressions_data.rs  packet_helpers.rs  repacketizer.rs  test_celt_fixed_point.rs  test_opus_decode.rs  test_opus_encode.rs  test_opus_projection.rs  trivial_example.rs
tests/common/: libopusenc.rs  mod.rs
