[package]
name = "mousiki"
description = "Pure Rust Opus decoder."
homepage = "https://github.com/cijiugechu/mousiki"
repository = "https://github.com/cijiugechu/mousiki"
authors = ["nemurubaka <cijiugechu@gmail.com>"]
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
categories = ["multimedia", "multimedia::audio", "multimedia::encoding"]
keywords = ["audio", "codec", "decoder", "opus"]
exclude = ["opus-go", "testdata"]

[dependencies]
log = { version = "0.4", default-features = false }

[dev-dependencies]
cpal = { version = "0.15", default-features = true }
