[workspace]
members = [".", "examples/playback"]
resolver = "3"

[package]
name = "mousiki"
description = "Pure Rust Opus decoder."
homepage = "https://github.com/cijiugechu/mousiki"
repository = "https://github.com/cijiugechu/mousiki"
authors = ["nemurubaka <cijiugechu@gmail.com>"]
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
categories = ["multimedia", "multimedia::audio", "multimedia::encoding"]
keywords = ["audio", "codec", "decoder", "opus"]
exclude = ["opus-go", "testdata"]

[features]
default = []
fixed_point = []
deep_plc = []
silk_strict_asserts = []

[dependencies]
libm = "0.2"
log = { version = "0.4", default-features = false }


[lints.clippy]
cast_lossless = "warn"
comparison_chain = "warn"
default_trait_access = "warn"
explicit_deref_methods = "warn"
if_not_else = "warn"
index_refutable_slice = "warn"
manual_assert = "warn"
manual_let_else = "warn"
manual_midpoint = "warn"
needless_pass_by_value = "warn"
redundant_else = "warn"
