[workspace]
members = [".", "examples/playback", "mousiki-dred-weights", "mousiki-deep-plc-weights"]
exclude = ["fuzz"]
resolver = "3"

[package]
name = "mousiki"
description = "Pure Rust Opus decoder."
homepage = "https://github.com/cijiugechu/mousiki"
repository = "https://github.com/cijiugechu/mousiki"
authors = ["nemurubaka <cijiugechu@gmail.com>"]
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
categories = ["multimedia", "multimedia::audio", "multimedia::encoding"]
keywords = ["audio", "codec", "decoder", "opus"]
exclude = ["opus-go", "testdata", "opus-c"]

[features]
default = []
fixed_point = []
enable_res24 = ["fixed_point"]
deep_plc = ["dred"]
deep_plc_weights = ["deep_plc", "mousiki-deep-plc-weights"]
deep_plc_weights_fetch = ["deep_plc_weights", "mousiki-deep-plc-weights/fetch"]
dred = ["mousiki-dred-weights"]
dred_fetch = ["dred", "mousiki-dred-weights/fetch"]
custom_modes = []
silk_strict_asserts = []
silk_debug = []
silk_tic_toc = []

[dependencies]
libm = "0.2"
log = { version = "0.4", default-features = false }
bitflags = "2"
mousiki-deep-plc-weights = { path = "mousiki-deep-plc-weights", optional = true }
mousiki-dred-weights = { path = "mousiki-dred-weights", optional = true }


[lints.clippy]
comparison_chain = "warn"
default_trait_access = "warn"
explicit_deref_methods = "warn"
if_not_else = "warn"
index_refutable_slice = "warn"
manual_assert = "warn"
manual_let_else = "warn"
manual_midpoint = "warn"
needless_pass_by_value = "warn"
redundant_else = "warn"
