[package]
name = "mousiki-deep-plc-weights"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Build-time deep PLC weights blob for Mousiki."
homepage = "https://github.com/cijiugechu/mousiki"
repository = "https://github.com/cijiugechu/mousiki"
readme = "README.md"
keywords = ["audio", "opus", "weights", "plc"]
categories = ["multimedia", "multimedia::audio", "multimedia::encoding"]
build = "build.rs"

[features]
fetch = []

[build-dependencies]
flate2 = "1"
sha2 = "0.10"
tar = "0.4"
ureq = { version = "3", features = ["socks-proxy"] }
